Added middle name in html file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>My Personal Portfolio</h1>
 <p>Bio</p>
 <ol>
-  <li>"Name : Louis Okwaro"</li>
+  <li>"Name : Louis Sanya Okwaro"</li>
   <li>"Occupation : Student"</li>
   <li>"School : Moringa School"</li>
   <li>"</li>
